fix: #257 IE big white space at bottom of the page

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1097,6 +1097,7 @@ footer {
 
 .neve-main {
   flex: 1 auto;
+  min-height: 1px;
 }
 
 .archive-container {
